# api/docs/swagger.json
@@ -16,6 +16,56 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/v1/conversations/{convo_id}/messages": {
+            "get": {
+                "description": "get message by conversation id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Message"
+                ],
+                "summary": "Get Message By Conversation Id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Conversation ID",
+                        "name": "convo_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "type": "object"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/model.Message"
+                                            }
+                                        },
+                                        "status": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/messages": {
             "post": {
                 "description": "create message from request body",
@@ -436,6 +486,23 @@
         }
     },
     "definitions": {
+        "model.Message": {
+            "type": "object",
+            "properties": {
+                "conversationId": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "sender": {
+                    "$ref": "#/definitions/model.User"
+                },
+                "sent_at": {
+                    "type": "string"
+                }
+            }
+        },
         "model.User": {
             "type": "object",
             "properties": {
@@ -474,11 +541,11 @@
                 "message": {
                     "type": "string"
                 },
-                "send_at": {
-                    "type": "string"
-                },
                 "sender": {
                     "$ref": "#/definitions/model.User"
+                },
+                "sent_at": {
+                    "type": "string"
                 }
             }
         },
