# internal/domain/message/message.go
@@ -10,14 +10,15 @@ import (
 
 type Repository interface {
 	Create(ctx context.Context, message *model.Message) (*model.Message, error)
-	GetAllBySenderReceiverIds(ctx context.Context, senderId string, receiverId string) ([]*model.Message, error)
-	GetAllByConversationId(ctx context.Context, email string) ([]*model.Message, error)
+	GetAllByConversationId(ctx context.Context, conversationId string) ([]*model.Message, error)
 }
 
 type Usecase interface {
 	Create(ctx context.Context, req *payload.CreateMessageRequest) (*payload.CreateMessageResponse, error)
+	GetAllByConversationId(ctx context.Context, req *payload.GetMessagesByConvIdRequest) (*payload.GetMessagesByConvIdResponse, error)
 }
 
 type Handler interface {
 	Create(ctx echo.Context) error
+	GetByConversationId(ctx echo.Context) error
 }
